# copier-pdm

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  copier.yml  mkdocs.yml  pyproject.toml  reset-history.sh
.github/workflows/: ci.yml
docs/: generate.md  migrate.md  requirements.md  update.md  work.md
project/: CONTRIBUTING.md.jinja  Makefile.jinja  README.md.jinja  duties.py.jinja  mkdocs.yml.jinja  pyproject.toml.jinja
project/.github/ISSUE_TEMPLATE/: bug_report.md.jinja  feature_request.md
project/.github/workflows/: ci.yml.jinja
project/config/: ruff.toml.jinja
project/config/vscode/: settings.json
project/docs/{% if author_username == 'davidciani' %}.overrides{% endif %}/: main.html.jinja
project/docs/{% if author_username == 'pawamoy' %}.overrides{% endif %}/: main.html.jinja
project/scripts/: gen_credits.py.jinja  setup.sh
project/src/{{python_package_import_name}}/: debug.py.jinja  {% if python_package_command_line_name %}cli.py{% endif %}.jinja
tests/: helpers.sh  test_generate.sh  test_licenses.sh
